Removido Connection Factory e Adicionada Conexão Cadastro

--- a/OneDrive/Documentos/NetBeansProjects/Loja_Racao/src/Telas/tela_nova_entrega.form
+++ b/OneDrive/Documentos/NetBeansProjects/Loja_Racao/src/Telas/tela_nova_entrega.form
@@ -93,7 +93,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="63" max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -235,10 +235,10 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+            <StringItem index="0" value="Atibaia"/>
+            <StringItem index="1" value="Bragan&#xe7;a Paulista"/>
+            <StringItem index="2" value="Bom Jesus dos Perd&#xf5;es"/>
+            <StringItem index="3" value="Piracaia"/>
           </StringArray>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -250,13 +250,165 @@
     <Component class="javax.swing.JComboBox" name="combox_bairro">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="155">
+            <StringItem index="0" value="Alpes Atibaia"/>
+            <StringItem index="1" value="Alto Boa Vista"/>
+            <StringItem index="2" value="Alvin&#xf3;polis"/>
+            <StringItem index="3" value="Atibaia Belvedere"/>
+            <StringItem index="4" value="Atibaia Jardim"/>
+            <StringItem index="5" value="Atibaia Vista da Montanha"/>
+            <StringItem index="6" value="Alpes Atibaia"/>
+            <StringItem index="7" value="Alto Boa Vista"/>
+            <StringItem index="8" value="Alvin&#xf3;polis"/>
+            <StringItem index="9" value="Atibaia Belvedere"/>
+            <StringItem index="10" value="Atibaia Jardim"/>
+            <StringItem index="11" value="Atibaia Vista da Montanha"/>
+            <StringItem index="12" value="Bocaina"/>
+            <StringItem index="13" value="Brotas"/>
+            <StringItem index="14" value="Caetetuba"/>
+            <StringItem index="15" value="Campos de Atibaia"/>
+            <StringItem index="16" value="Casas Populares"/>
+            <StringItem index="17" value="Centro"/>
+            <StringItem index="18" value="Ch&#xe1;cara da Colina"/>
+            <StringItem index="19" value="Ch&#xe1;cara Fern&#xe3;o Dias"/>
+            <StringItem index="20" value="Ch&#xe1;cara Maring&#xe1;"/>
+            <StringItem index="21" value="Ch&#xe1;cara Parque S&#xe3;o Pedro"/>
+            <StringItem index="22" value="Chanceler Nova Ruhr"/>
+            <StringItem index="23" value="Chs Fern&#xe3;o Dias"/>
+            <StringItem index="24" value="Chs Maring&#xe1;"/>
+            <StringItem index="25" value="Cidade Sat&#xe9;lite"/>
+            <StringItem index="26" value="Condom&#xed;nio Parque das Gar&#xe7;as I"/>
+            <StringItem index="27" value="Condom&#xed;nio Residencial Pedra Grande"/>
+            <StringItem index="28" value="Conjunto Habitacional Jos&#xe9; Barnet Y Vives"/>
+            <StringItem index="29" value="Conjunto Habitacional S&#xe3;o Jos&#xe9;"/>
+            <StringItem index="30" value="Ctb"/>
+            <StringItem index="31" value="Est&#xe2;ncia Lituanika"/>
+            <StringItem index="32" value="Est&#xe2;ncia Parque de Atibaia"/>
+            <StringItem index="33" value="Est&#xe2;ncia San Remo"/>
+            <StringItem index="34" value="Est&#xe2;ncia Santa Maria do Laranjal"/>
+            <StringItem index="35" value="Est&#xe2;ncia Santa Maria do Port&#xe3;o"/>
+            <StringItem index="36" value="Est&#xe2;ncia Santa Maria Laranjal"/>
+            <StringItem index="37" value="Est&#xe2;ncia Santa Maria Port&#xe3;o"/>
+            <StringItem index="38" value="Guaxinduva"/>
+            <StringItem index="39" value="Iara"/>
+            <StringItem index="40" value="Itapetinga"/>
+            <StringItem index="41" value="Itapetininga"/>
+            <StringItem index="42" value="Jardim Alvin&#xf3;polis"/>
+            <StringItem index="43" value="Jardim Alvin&#xf3;polis Ii"/>
+            <StringItem index="44" value="Jardim Am&#xe9;rica"/>
+            <StringItem index="45" value="Jardim Brasil"/>
+            <StringItem index="46" value="Jardim Brogota"/>
+            <StringItem index="47" value="Jardim Centen&#xe1;rio"/>
+            <StringItem index="48" value="Jardim Cerejeiras"/>
+            <StringItem index="49" value="Jardim Colonial"/>
+            <StringItem index="50" value="Jardim das Cerejeiras"/>
+            <StringItem index="51" value="Jardim das Flores"/>
+            <StringItem index="52" value="Jardim das Palmeiras"/>
+            <StringItem index="53" value="Jardim do Lago"/>
+            <StringItem index="54" value="Jardim do Trevo"/>
+            <StringItem index="55" value="Jardim dos Pinheiros"/>
+            <StringItem index="56" value="Jardim Eneide"/>
+            <StringItem index="57" value="Jardim Est&#xe2;ncia Brasil"/>
+            <StringItem index="58" value="Jardim Flamboyant-b"/>
+            <StringItem index="59" value="Jardim Floresta"/>
+            <StringItem index="60" value="Jardim Imperador"/>
+            <StringItem index="61" value="Jardim Imperial"/>
+            <StringItem index="62" value="Jardim Ipe"/>
+            <StringItem index="63" value="Jardim Itaperi"/>
+            <StringItem index="64" value="Jardim Jaragu&#xe1;"/>
+            <StringItem index="65" value="Jardim Kanimar"/>
+            <StringItem index="66" value="Jardim Lago"/>
+            <StringItem index="67" value="Jardim Maracan&#xe3;"/>
+            <StringItem index="68" value="Jardim Maristela"/>
+            <StringItem index="69" value="Jardim Maristela II"/>
+            <StringItem index="70" value="Jardim Pacaembu"/>
+            <StringItem index="71" value="Jardim Para&#xed;so da Usina"/>
+            <StringItem index="72" value="Jardim Para&#xed;so do Tanque"/>
+            <StringItem index="73" value="Jardim Para&#xed;so Tanque"/>
+            <StringItem index="74" value="Jardim Parque Real Atibaia"/>
+            <StringItem index="75" value="Jardim Paulista"/>
+            <StringItem index="76" value="Jardim Pinheiros"/>
+            <StringItem index="77" value="Jardim Planalto do Tanque"/>
+            <StringItem index="78" value="Jardim Residencial Santa Lu&#xed;za"/>
+            <StringItem index="79" value="Jardim Roseli"/>
+            <StringItem index="80" value="Jardim Santa B&#xe1;rbara"/>
+            <StringItem index="81" value="Jardim Santo Ant&#xf4;nio"/>
+            <StringItem index="82" value="Jardim S&#xe3;o Bento do Tanque"/>
+            <StringItem index="83" value="Jardim S&#xe3;o Felipe"/>
+            <StringItem index="84" value="Jardim Shangri-l&#xe1;"/>
+            <StringItem index="85" value="Jardim Siriema"/>
+            <StringItem index="86" value="Jardim Sueli"/>
+            <StringItem index="87" value="Jardim Suely"/>
+            <StringItem index="88" value="Jardim Su&#xed;&#xe7;a"/>
+            <StringItem index="89" value="Jardim Tapaj&#xf3;s"/>
+            <StringItem index="90" value="Jardim Terceiro Centen&#xe1;rio"/>
+            <StringItem index="91" value="Jardim Trevo"/>
+            <StringItem index="92" value="Loteamento Loanda"/>
+            <StringItem index="93" value="Loteamento Retiro Recanto Tranquilo"/>
+            <StringItem index="94" value="Loteamento Vale das Flores"/>
+            <StringItem index="95" value="Maracan&#xe3;"/>
+            <StringItem index="96" value="Marmeleiro"/>
+            <StringItem index="97" value="Mato Dentro"/>
+            <StringItem index="98" value="Nova Cerejeira"/>
+            <StringItem index="99" value="Nova Gard&#xea;nia"/>
+            <StringItem index="100" value="Panorama Parque Residencial"/>
+            <StringItem index="101" value="Parque Arco &#xcd;ris"/>
+            <StringItem index="102" value="Parque da Represa"/>
+            <StringItem index="103" value="Parque das Na&#xe7;&#xf5;es"/>
+            <StringItem index="104" value="Parque dos Coqueiros"/>
+            <StringItem index="105" value="Parque Fern&#xe3;o Dias"/>
+            <StringItem index="106" value="Parque Gar&#xe7;as"/>
+            <StringItem index="107" value="Parque Na&#xe7;&#xf5;es"/>
+            <StringItem index="108" value="Parque Residencial Itagua&#xe7;u"/>
+            <StringItem index="109" value="Parque Rio Abaixo"/>
+            <StringItem index="110" value="Pinheiral I"/>
+            <StringItem index="111" value="Pinheiral II"/>
+            <StringItem index="112" value="Planalto Atibaia"/>
+            <StringItem index="113" value="Ponte"/>
+            <StringItem index="114" value="Ponte Alta"/>
+            <StringItem index="115" value="Port&#xe3;o"/>
+            <StringItem index="116" value="Recanto Palmares"/>
+            <StringItem index="117" value="Recreio Estoril"/>
+            <StringItem index="118" value="Recreio Maristela"/>
+            <StringItem index="119" value="Recreio S&#xe3;o Vicente"/>
+            <StringItem index="120" value="Ref&#xfa;gio"/>
+            <StringItem index="121" value="Ressaca"/>
+            <StringItem index="122" value="Retiro das Fontes"/>
+            <StringItem index="123" value="Ribeir&#xe3;o dos Porcos"/>
+            <StringItem index="124" value="Ribeir&#xe3;o Porcos"/>
+            <StringItem index="125" value="Rio Abaixo"/>
+            <StringItem index="126" value="Rio Acima"/>
+            <StringItem index="127" value="Ros&#xe1;rio"/>
+            <StringItem index="128" value="Samambaia Parque Residencial"/>
+            <StringItem index="129" value="San Fernando Valley"/>
+            <StringItem index="130" value="Sul Brasil"/>
+            <StringItem index="131" value="Tanque"/>
+            <StringItem index="132" value="Vila Boa Esperan&#xe7;a"/>
+            <StringItem index="133" value="Vila Carvalho"/>
+            <StringItem index="134" value="Vila Dom Pedro"/>
+            <StringItem index="135" value="Vila dos Netos"/>
+            <StringItem index="136" value="Vila Esperan&#xe7;a"/>
+            <StringItem index="137" value="Vila Esperia Ou Giglio"/>
+            <StringItem index="138" value="Vila Gard&#xea;nia"/>
+            <StringItem index="139" value="Vila Helena"/>
+            <StringItem index="140" value="Vila Imperial Dom Pedro"/>
+            <StringItem index="141" value="Vila Junqueira"/>
+            <StringItem index="142" value="Vila Loanda"/>
+            <StringItem index="143" value="Vila Maria"/>
+            <StringItem index="144" value="Vila Mira"/>
+            <StringItem index="145" value="Vila Petr&#xf3;polis"/>
+            <StringItem index="146" value="Vila Rica"/>
+            <StringItem index="147" value="Vila Salles"/>
+            <StringItem index="148" value="Vila Santa Clara"/>
+            <StringItem index="149" value="Vila Santa Helena"/>
+            <StringItem index="150" value="Vila Santista"/>
+            <StringItem index="151" value="Vila Santo Ant&#xf4;nio"/>
+            <StringItem index="152" value="Vila Silva"/>
+            <StringItem index="153" value="Vila Tha&#xed;s"/>
+            <StringItem index="154" value="Vit&#xf3;ria R&#xe9;gia"/>
           </StringArray>
         </Property>
+        <Property name="selectedIndex" type="int" value="-1"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
